test/sema/pointer-equals-on-non-pointer-type.delta
// RUN: %check_errors %not %delta -typecheck %s

void f(int a, int b) {
	// CHECK: [[@LINE+1]]:8: error: both operands to pointer comparison operator must have pointer type
	_ = a !== b;
}
